name:                aoc2017
version:             0.1.0.0
synopsis:            Advent of Code 2017 - my answers
homepage:            https://github.com/ephemient/aoc2017#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Lin
maintainer:          ephemient@gmail.com
build-type:          Simple
extra-source-files:  README.md
data-files:          day1.txt, day2.txt, day3.txt, day4.txt, day5.txt, day6.txt, day7.txt, day8.txt, day9.txt, day10.txt, day11.txt, day12.txt, day13.txt, day14.txt, day15.txt, day16.txt, day17.txt, day18.txt, day19.txt
                   , colormaps.yaml
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/ephemient/aoc2017#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9, Day10, Day11, Day12, Day13, Day14, Day15, Day16, Day17, Day18, Day19
  build-depends:       base >= 4.7 && < 5
                     , lcg
                     , array
                     , containers
                     , mtl
                     , parallel
  default-language:    Haskell2010

executable aoc2017-exe
  hs-source-dirs:      app
  main-is:             Main.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -pgmL markdown-unlit
  build-depends:       base
                     , markdown-unlit
                     , aoc2017
  other-modules:       Paths_aoc2017
  default-language:    Haskell2010

executable aoc2017-day11
  hs-source-dirs:      app
  main-is:             Day11Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Day11Main
  build-depends:       base
                     , aoc2017
                     , JuicyPixels
                     , primitive
                     , unordered-containers
                     , scientific
                     , vector
                     , yaml
  other-modules:       Paths_aoc2017
  default-language:    Haskell2010

executable aoc2017-day14
  hs-source-dirs:      app
  main-is:             Day14Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Day14Main
  build-depends:       base
                     , aoc2017
                     , JuicyPixels
                     , array
                     , unordered-containers
                     , scientific
                     , vector
                     , yaml
  other-modules:       Paths_aoc2017
  default-language:    Haskell2010
  other-modules:       Paths_aoc2017
  default-language:    Haskell2010

test-suite aoc2017-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , aoc2017
                     , hspec
  other-modules:       Day1Spec, Day2Spec, Day3Spec, Day4Spec, Day5Spec, Day6Spec, Day7Spec, Day8Spec, Day9Spec, Day10Spec, Day11Spec, Day12Spec, Day13Spec, Day14Spec, Day15Spec, Day16Spec, Day17Spec, Day18Spec, Day19Spec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark aoc2017-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base
                     , aoc2017
                     , criterion
  other-modules:       Paths_aoc2017
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ephemient/aoc2017
